--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,11 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build \
+            --build-arg REDIS_HOST=${{ secrets.REDIS_ENDPONT }} \
+            --build-arg RDS_HOST=${{ secrets.RDS_ENDPONT }} \
+            --build-arg KAFKA_BROKERS=${{ secrets.MSK_BROKERS }} \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Update Launch Template and Refresh Instances
@@ -99,3 +103,4 @@ jobs:
         run: |
           echo "Checking Kafka broker connection..."
           nc -zv ${{ env.KAFKA_BROKER }} 9092
+          
